--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ googleapis-common-protos==1.59.0
 greenlet==2.0.2
 grpcio==1.53.0
 grpcio-status==1.53.0
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
